Stage 5.1: creato child module fantacalcio-app
spostata tutta la codebase sotto il child

TODO: rinominare la git folder da Fantacalcio -> fantacalcio!!